--- a/Projects/Delphi/Template2/unit_main.fmx
+++ b/Projects/Delphi/Template2/unit_main.fmx
@@ -14,6 +14,7 @@ object TabbedwithNavigationForm: TTabbedwithNavigationForm
   OnShow = FormShow
   DesignerMasterStyle = 0
   object TabControlMain: TTabControl
+    OnGesture = GestureDone
     Align = Client
     FullSize = True
     Size.Width = 332.000000000000000000
@@ -34,6 +35,7 @@ object TabbedwithNavigationForm: TTabbedwithNavigationForm
       TabOrder = 0
       Text = 'Train'
       object TabControl2: TTabControl
+        OnGesture = GestureDone
         Align = Client
         FullSize = True
         Size.Width = 332.000000000000000000
@@ -146,6 +148,19 @@ object TabbedwithNavigationForm: TTabbedwithNavigationForm
           TextSettings.HorzAlign = Center
           Text = 'Consist'
         end
+      end
+      object ListView1: TListView
+        ItemAppearanceClassName = 'TListItemRightDetailAppearance'
+        ItemEditAppearanceClassName = 'TListItemRightDetailDeleteAppearance'
+        HeaderAppearanceClassName = 'TListHeaderObjects'
+        FooterAppearanceClassName = 'TListHeaderObjects'
+        OnUpdateObjects = ListView1UpdateObjects
+        EditMode = True
+        Align = Client
+        Size.Width = 332.000000000000000000
+        Size.Height = 503.000000000000000000
+        Size.PlatformDefault = False
+        TabOrder = 1
       end
     end
     object TabItemLog: TTabItem
@@ -458,6 +473,10 @@ object TabbedwithNavigationForm: TTabbedwithNavigationForm
     Left = 128
     Top = 441
   end
+  object MainMenu1: TMainMenu
+    Left = 184
+    Top = 240
+  end
   object GestureManager1: TGestureManager
     Sensitivity = 80.000000000000000000
     Left = 168
@@ -504,7 +523,7 @@ object TabbedwithNavigationForm: TTabbedwithNavigationForm
     Throttle.AutoLoadFDI = True
     Throttle.AutoScrollDelta = 2
     Left = 56
-    Top = 385
+    Top = 361
   end
   object ActionList1: TActionList
     Left = 176
