--- a/Projects/Lazarus/LccEmpireModeler/unitobjectwizardform.lfm
+++ b/Projects/Lazarus/LccEmpireModeler/unitobjectwizardform.lfm
@@ -1,100 +1,119 @@
 object FormObjectWizard: TFormObjectWizard
   Left = 533
-  Height = 276
+  Height = 398
   Top = 208
-  Width = 462
+  Width = 564
   BorderStyle = bsDialog
   Caption = 'Object Wizard'
-  ClientHeight = 276
-  ClientWidth = 462
+  ClientHeight = 398
+  ClientWidth = 564
   OnShow = FormShow
   Position = poOwnerFormCenter
   LCLVersion = '1.4.0.4'
   object Panel1: TPanel
     Left = 0
-    Height = 226
+    Height = 348
     Top = 0
-    Width = 462
+    Width = 564
     Align = alClient
-    ClientHeight = 226
-    ClientWidth = 462
+    ClientHeight = 348
+    ClientWidth = 564
     TabOrder = 0
-    object ComboBoxClass: TComboBox
-      Left = 40
-      Height = 21
-      Top = 152
-      Width = 384
-      Anchors = [akTop, akLeft, akRight]
-      ItemHeight = 0
-      ItemIndex = 0
-      Items.Strings = (
-        'Turnout'
-        'Signal Head'
-        'Block'
-        'Crossing Gate'
-        'Light'
-        'Generic IO'
-        ''
-        ''
-        ''
-      )
+    object Panel3: TPanel
+      Left = 1
+      Height = 191
+      Top = 1
+      Width = 562
+      Align = alTop
+      ClientHeight = 191
+      ClientWidth = 562
       TabOrder = 0
-      Text = 'Turnout'
+      object EditName: TEdit
+        Left = 40
+        Height = 22
+        Top = 40
+        Width = 486
+        Anchors = [akTop, akLeft, akRight]
+        TabOrder = 0
+        Text = 'EditName'
+      end
+      object Label2: TLabel
+        Left = 28
+        Height = 16
+        Top = 72
+        Width = 374
+        Caption = 'Enter a Description for this Object on your layout [optional]'
+        ParentColor = False
+      end
+      object EditDescription: TEdit
+        Left = 40
+        Height = 22
+        Top = 95
+        Width = 486
+        Anchors = [akTop, akLeft, akRight]
+        TabOrder = 1
+        Text = 'EditDescription'
+      end
+      object Label3: TLabel
+        Left = 28
+        Height = 16
+        Top = 128
+        Width = 342
+        Caption = 'Enter a grouping name for this Object [recommended]'
+        ParentColor = False
+      end
+      object ComboBoxClass: TComboBox
+        Left = 40
+        Height = 21
+        Top = 152
+        Width = 486
+        Anchors = [akTop, akLeft, akRight]
+        ItemHeight = 0
+        ItemIndex = 0
+        Items.Strings = (
+          'Turnout'
+          'Signal Head'
+          'Block'
+          'Crossing Gate'
+          'Light'
+          'Generic IO'
+          ''
+          ''
+          ''
+        )
+        OnChange = ComboBoxClassChange
+        TabOrder = 2
+        Text = 'Turnout'
+      end
+      object Label1: TLabel
+        Left = 28
+        Height = 16
+        Top = 17
+        Width = 392
+        Caption = 'Enter a Unique Name for this Object on your Layout [required]'
+        ParentColor = False
+      end
     end
-    object Label3: TLabel
-      Left = 28
-      Height = 16
-      Top = 128
-      Width = 342
-      Caption = 'Enter a grouping name for this Object [recommended]'
-      ParentColor = False
-    end
-    object EditDescription: TEdit
-      Left = 40
-      Height = 22
-      Top = 95
-      Width = 384
-      Anchors = [akTop, akLeft, akRight]
+    object PanelObjectOptions: TPanel
+      Left = 1
+      Height = 155
+      Top = 192
+      Width = 562
+      Align = alClient
       TabOrder = 1
-      Text = 'EditDescription'
-    end
-    object Label2: TLabel
-      Left = 28
-      Height = 16
-      Top = 72
-      Width = 374
-      Caption = 'Enter a Description for this Object on your layout [optional]'
-      ParentColor = False
-    end
-    object EditName: TEdit
-      Left = 40
-      Height = 22
-      Top = 40
-      Width = 384
-      Anchors = [akTop, akLeft, akRight]
-      TabOrder = 2
-      Text = 'EditName'
-    end
-    object Label1: TLabel
-      Left = 28
-      Height = 16
-      Top = 17
-      Width = 392
-      Caption = 'Enter a Unique Name for this Object on your Layout [required]'
-      ParentColor = False
     end
   end
   object Panel2: TPanel
     Left = 0
     Height = 50
-    Top = 226
-    Width = 462
+    Top = 348
+    Width = 564
     Align = alBottom
     ClientHeight = 50
-    ClientWidth = 462
+    ClientWidth = 564
     TabOrder = 1
     object Button1: TButton
-      Left = 171
+      Left = 273
       Height = 22
       Top = 16
       Width = 120
@@ -104,7 +123,7 @@ object FormObjectWizard: TFormObjectWizard
       TabOrder = 0
     end
     object Button2: TButton
-      Left = 304
+      Left = 406
       Height = 22
       Top = 16
       Width = 120
